switched test docker db to postgres, documented cli

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,12 @@
 .PHONY: db
 db:
-        mkdir -p data
-        docker run -p 127.0.0.1:27017:27017 -v data:/data/db --rm --name=migrator-test-db mongo
+	mkdir -p data
+	docker run \
+		-p 5432:5432 \
+		-v data:/var/lib/postgresql/data \
+		--rm \
+		--name=migrator-test-db \
+		-e POSTGRES_USER=test_user \
+		-e POSTGRES_PASSWORD=test_password \
+	       	-e POSTGRES_DB=test_db \
+		postgres
